// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber renders correctly when controls has custom upIcon and downIcon 1`] = `
<div
  class="ant-input-number"
>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      role="spinbutton"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber renders correctly when controls is {} 1`] = `
<div
  class="ant-input-number"
>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      role="spinbutton"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber renders correctly when controls is boolean 1`] = `
<div
  class="ant-input-number"
>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      role="spinbutton"
      step="1"
      value=""
    />
  </div>
</div>
`;

exports[`InputNumber rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-input-number ant-input-number-rtl"
>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      autocomplete="off"
      class="ant-input-number-input"
      role="spinbutton"
      step="1"
      value=""
    />
  </div>
</div>
`;
